crates/index-scheduler/src/queue/snapshots/test.rs/test_auto_deletion_of_tasks/everything_has_been_processed.snap
---
source: crates/index-scheduler/src/queue/test.rs
snapshot_kind: text
---
[
  {
    "uid": 6,
    "batchUid": 6,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "TaskDeletion": {
        "matched_tasks": 2,
        "deleted_tasks": 2,
        "original_filter": "[filter]"
      }
    },
    "status": "succeeded",
    "kind": {
      "taskDeletion": {
        "query": "[query]",
        "tasks": [
          58,
          48,
          0,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          16,
          0,
          0,
          0,
          3,
          0,
          5,
          0
        ]
      }
    }
  }
]
